src/objects/ISL_Webservice_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store ISL Webservice configuration values</description>
    <fields>
        <fullName>ACET_Common_Name__c</fullName>
        <description>Name of record without org prefix</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Example for QA record qa_getDocument, &quot;getDocument&quot; would be the ACET Common Name</inlineHelpText>
        <label>ACET Common Name</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Log_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To turn on error logging for integration, set it to Checked otherwise Unchecked</description>
        <label>Error Log Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISLWebserviceEID__c</fullName>
        <description>External Id is the 18 character SFDC Record Id from:
PROD (records created before 9/25//2018) or
Scrum Team Sandbox (records created after 9/25/2018)</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>External Id is the 18 character SFDC Record Id from:
PROD (records created before 9/25//2018) or
Scrum Team Sandbox (records created after 9/25/2018)</inlineHelpText>
        <label>ISLWebserviceEID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True when OIL webservice up and running otherwise False</description>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <label>Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_Header_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to determine the scope value as &apos;ace&apos; or &apos;off&apos; for the member services</description>
        <label>Scope Header Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenExpiredBy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TokenExpiredBy</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TokenExpiry__c</fullName>
        <label>TokenExpiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ISL Webservice Config</label>
    <listViews>
        <fullName>Common_name_EID_Value</fullName>
        <columns>NAME</columns>
        <columns>ACET_Common_Name__c</columns>
        <columns>ISLWebserviceEID__c</columns>
        <columns>Value__c</columns>
        <columns>Is_Available__c</columns>
        <filterScope>Everything</filterScope>
        <label>Common name, EID, Value</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ISETWrap</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ACETOrgNameToExernalSystemURLMap</value>
        </filters>
        <label>ACETOrgNameToExernalSystemURLMap</label>
    </listViews>
</CustomObject>